Fix: 결제창이 뜨지않고 새로고침되는 현상 수정

--- a/src/main/resources/templates/payment/checkout.html
+++ b/src/main/resources/templates/payment/checkout.html
@@ -87,7 +87,7 @@
                                                         <a class="gl-link">Terms of Service.</a>
                                                     </div>
                                                     <div class="u-s-m-b-15">
-                                                        <button class="btn btn--e-brand-b-2 btn-kakao-pay" type="submit">카카오 페이</button>
+                                                        <button class="btn btn--e-brand-b-2 btn-kakao-pay" id="kakao-pay" type="button">카카오 페이</button>
                                                     </div>
 
                                                     <div>
