fix: Fix replace path

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html class="no-js" lang="ko">
 <head>
-    <th:block th:replace="/fragments/base/head :: head"></th:block>
+    <th:block th:replace="fragments/base/head :: head"></th:block>
 </head>
 
 <body class="config">
@@ -14,7 +14,7 @@
 <div id="app">
     <!--====== Main Header ======-->
     <header class="header--style-1">
-        <th:block th:replace="/fragments/base/header :: header"></th:block>
+        <th:block th:replace="fragments/base/header :: header"></th:block>
     </header>
     <!--====== End - Main Header ======-->
 
@@ -860,7 +860,7 @@
 
     <!--====== Main Footer ======-->
     <footer>
-        <th:block th:replace="/fragments/base/footer"></th:block>
+        <th:block th:replace="fragments/base/footer"></th:block>
     </footer>
 
     <!--====== Modal Section ======-->
@@ -1097,7 +1097,7 @@
 </div>
 <!--====== End - Main App ======-->
 
-<th:block th:replace="/fragments/base/script :: script"></th:block>
+<th:block th:replace="fragments/base/script :: script"></th:block>
 
 </body>
 </html>
