--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html class="no-js" lang="en">
 <head>
-    <th:block th:replace="/fragments/base/head :: head"></th:block>
+    <th:block th:replace="fragments/base/head :: head"></th:block>
 </head>
 
 <body class="config">
@@ -99,11 +99,11 @@
 
     <!--====== Main Footer ======-->
     <footer>
-        <th:block th:replace="/fragments/base/footer :: footer"></th:block>
+        <th:block th:replace="fragments/base/footer :: footer"></th:block>
     </footer>
 </div>
 <!--====== End - Main App ======-->
-<th:block th:replace="/fragments/base/script :: script"></th:block>
+<th:block th:replace="fragments/base/script :: script"></th:block>
 
 </body>
 </html>
