--- a/src/main/resources/templates/wishlist.html
+++ b/src/main/resources/templates/wishlist.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html class="no-js" lang="en">
 <head>
-    <th:block th:replace="/fragments/base/head :: head"></th:block>
+    <th:block th:replace="fragments/base/head :: head"></th:block>
 </head>
 <body class="config">
 <div class="preloader is-active">
@@ -14,7 +14,7 @@
 <div id="app">
     <!--====== Main Header ======-->
     <header class="header--style-1 header--box-shadow">
-        <th:block th:replace="/fragments/base/header :: header"></th:block>
+        <th:block th:replace="fragments/base/header :: header"></th:block>
     </header>
     <!--====== End - Main Header ======-->
 
@@ -152,7 +152,7 @@
 
     <!--====== Main Footer ======-->
     <footer>
-        <th:block th:replace="/fragments/base/footer :: footer"></th:block>
+        <th:block th:replace="fragments/base/footer :: footer"></th:block>
     </footer>
 
     <!--====== Modal Section ======-->
@@ -206,7 +206,7 @@
 </div>
 <!--====== End - Main App ======-->
 
-<th:block th:replace="/fragments/base/script :: script"></th:block>
+<th:block th:replace="fragments/base/script :: script"></th:block>
 
 </body>
 </html>
