--- a/src/main/resources/templates/payment/payment.html
+++ b/src/main/resources/templates/payment/payment.html
@@ -13,7 +13,8 @@
     <script th:src="@{/payment.js}"></script>
     <script th:inline="javascript">
         window.onload = () => {
-            addKakaoPayEvent("testItem", 10000);
+            let opened = addKakaoPayEvent("testItem", 10000);
+
         }
     </script>
 </body>
