--- a/src/main/resources/templates/fragments/base/header.html
+++ b/src/main/resources/templates/fragments/base/header.html
@@ -10,7 +10,7 @@
             <div class="primary-nav">
                 <!--====== Main Logo ======-->
                 <a class="main-logo" href="/">
-                    <img src="images/logo/logo-1.png" alt=""></a>
+                    <img src="/images/logo/logo-1.png" alt=""></a>
                 <!--====== End - Main Logo ======-->
 
                 <!--====== Dropdown Main plugin ======-->
