Feat: user 유저 기능 변경

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -64,11 +64,13 @@
                                                 <button class="btn btn--e-transparent-brand-b-2" type="submit">로그인</button>
                                             </div>
                                         </div>
-
+                                            <!--카카오 로그인 -->
                                         <div id="social-login-div" class="gl-s-api">
                                             <div class="u-s-m-b-15">
                                                 <button class="gl-s-api__btn" type="button">
+                                                    <a href="https://kauth.kakao.com/oauth/authorize?response_type=code&client_id=578c006810acb509f2ccc52277d13ec9&redirect_uri=http://localhost:8081/api/kakao/login&prompt=select_account">
                                                     <img src="/images/kakaologin/kakao_login_medium_wide.png">
+                                                    </a>
                                                 </button>
                                             </div>
 
